--- a/PalworldServerManager/PalworldServerManager/Form_ServerSettings.resx
+++ b/PalworldServerManager/PalworldServerManager/Form_ServerSettings.resx
@@ -140,7 +140,7 @@
     <value>0</value>
   </data>
   <data name="button1.Text" xml:space="preserve">
-    <value>Save Current Server World Setting To File</value>
+    <value>Save</value>
   </data>
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -185,7 +185,7 @@
     <value>0</value>
   </data>
   <data name="button2.Text" xml:space="preserve">
-    <value>Load Default Server World Settings</value>
+    <value>Load Default Server Settings</value>
   </data>
   <data name="button2.ToolTip" xml:space="preserve">
     <value>Load the default server settings used by palworld.</value>
@@ -221,7 +221,7 @@
     <value>1</value>
   </data>
   <data name="button3.Text" xml:space="preserve">
-    <value>Open Server World Setting INI File</value>
+    <value>Open World Setting INI File</value>
   </data>
   <data name="button3.ToolTip" xml:space="preserve">
     <value>Opens up the PalWorldSettings.ini file</value>
